--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ play.i18n.langs = [ "en" ]
 # db.default.password=""
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/crane?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8"
-db.default.user=root
+db.default.username=root
 db.default.password="root"
 
 # Evolutions
