--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,7 +35,7 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/crane?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8"
+db.default.url="jdbc:mysql://localhost:3306/cane?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf8"
 db.default.username=root
 db.default.password="root"
 
