--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,9 +35,10 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/cane?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf8"
+db.default.url="jdbc:mysql://localhost:3306/cane?autoReconnect=true&useUnicode=true&characterEncoding=utf8"
 db.default.username=root
 db.default.password="root"
+# db.default.logStatements=true
 
 # Evolutions
 # ~~~~~
@@ -60,10 +61,10 @@ ebean.default=["models.*"]
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
-logger.root=INFO
+# logger.root=INFO
 
 # Logger used by the framework:
-logger.play=INFO
+# logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+# logger.application=DEBUG
